# ComfyUI_PartPacker

./: PartPacker_node.py  README.md  __init__.py  license.md  node_utils.py  pyproject.toml  requirements.txt
PartPacker/: README.md  app.py  requirements.lock.txt
PartPacker/assets/meshes/: balloon_whisk.ply
PartPacker/data/: bipartite_contraction.py
PartPacker/docker/: Dockerfile  README.md
PartPacker/flow/: flow_matching.py  model.py  utils.py
PartPacker/flow/configs/: big_parts_strict_pvae.py  schema.py
PartPacker/flow/modules/: dit.py
PartPacker/flow/scripts/: infer.py
PartPacker/vae/: model.py  utils.py
PartPacker/vae/configs/: part_woenc.py  schema.py
PartPacker/vae/modules/: attention.py  transformer.py
PartPacker/vae/scripts/: infer.py
example_workflows/: ComfyUI_PartPacker.json  ComfyUI_PartPacker_Workflow .json  workflows_1.json
